--- a/releases/test-dev.yaml
+++ b/releases/test-dev.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: dev
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.chart-image: darknode/httpbuddy: *
+    flux.weave.works/tag.chart-image: glob:*
 spec:
   releaseName: http-dev
   chart:
